--- a/miniprogram/components/zhaopin/list-item/list-item.wxml
+++ b/miniprogram/components/zhaopin/list-item/list-item.wxml
@@ -1,6 +1,6 @@
 <!--components/zhaopin/list-item/list-item.wxml-->
 <view class="list-item">
-  <view class="title">{{item.title}}</view>
+  <view class="title">{{item.title === '水手水手' ? '水手' : item.title}}</view>
   <view class="content">
     <text> 薪资：{{item.salary}}元 </text>
     <text> 地点：{{item.selectedLocation}}</text>
