--- a/miniprogram/pages/admin/resumeDetail/resumeDetail.wxml
+++ b/miniprogram/pages/admin/resumeDetail/resumeDetail.wxml
@@ -6,7 +6,7 @@
     <view class="section-title">证书岗位</view>
     <view class="content">
       <text> {{resumes.selectedCertificate}}</text>
-      <text>{{resumes.selectedRank}}</text>
+      <text>{{resumes.selectedRank === '水手' ? '' : resumes.selectedRank}}</text>
     </view>
   </view>
   
