--- a/miniprogram/pages/jobseeker/jobseeker.wxml
+++ b/miniprogram/pages/jobseeker/jobseeker.wxml
@@ -10,7 +10,7 @@
         <!-- 顶部选项卡 -->
         <scroll-view scroll-x="true" class="tabs" scroll-with-animation scroll-left="{{scrollLeft}}">
             <view wx:for="{{tabs}}" wx:key="index" class="tab {{currentTab === index ? 'active' : ''}}" bindtap="switchTab" data-index="{{index}}">
-                <text>{{item.name}}</text>
+                <text>{{item.name === '水手水手' ? '水手' : item.name}}</text>
             </view>
         </scroll-view>
         <!-- 内容区域 -->
@@ -18,7 +18,7 @@
             <swiper-item wx:for="{{jobLists}}" wx:key="index">
                 <view class="item">
                     <view class="list-item" wx:for="{{jobLists[index]}}" wx:key="id" data-id="{{item.id}}" bind:tap="getResumeDetails">
-                        <view class="item-title">{{item.title}}</view>
+                        <view class="item-title">{{item.title === '水手水手' ? '水手' : item.title}}</view>
                         <view class="item-content">
                             <text> 薪资:{{item.salary}}元 </text>
                             <text> 性别:{{item.selectedGender}}</text>
