--- a/miniprogram/pages/publishJobPost/publishJobPost.wxml
+++ b/miniprogram/pages/publishJobPost/publishJobPost.wxml
@@ -53,8 +53,9 @@
 
     <!-- 输入手机号 -->
     <view class="section">
-        <text class="label">手机号</text>
-        <view class="picker-group">
+        <text class="label">姓名和手机号</text>
+        <view class="input-group">
+            <input type="number" placeholder="姓名" value="{{familyName}}" bindinput="handleFamilyNameChange" maxlength="4" class="input" />
             <input type="number" placeholder="请输入手机号" value="{{mobilePhone}}" bindinput="handlemobilePhoneChange" maxlength="11" class="input" />
         </view>
     </view>
