--- a/miniprogram/components/zhaopin/list-item/list-item.wxml
+++ b/miniprogram/components/zhaopin/list-item/list-item.wxml
@@ -1,9 +1,15 @@
 <!--components/zhaopin/list-item/list-item.wxml-->
 <view class="list-item">
-  <view class="title">{{item.title === '水手水手' ? '水手' : item.title}}</view>
-  <view class="content">
-    <text> 薪资：{{item.salary}}元 </text>
-    <text> 地点：{{item.selectedLocation}}</text>
-    <text> 日期：{{item.date}} </text>
-  </view>
+    <view class="title">
+        <view>{{item.familyName}}</view>
+        <view wx:if="{{item.isBrowsed}}" class="browse-badge">
+            <icon type="success" size="14"></icon>
+            <text>已浏览</text>
+        </view>
+    </view>
+    <view class="content">
+        <text> 薪资：{{item.salary}}元 </text>
+        <text> 地点：{{item.selectedLocation}}</text>
+        <text> 日期：{{item.date}} </text>
+    </view>
 </view>
