--- a/miniprogram/pages/admin/jobDetail/jobDetail.wxml
+++ b/miniprogram/pages/admin/jobDetail/jobDetail.wxml
@@ -33,9 +33,10 @@
     </view>
 
     <view class="section">
-        <view class="section-title">联系电话</view>
+        <view class="section-title">联系方式</view>
         <view class="content">
-            <text>{{jobDetailInfo.mobilePhone}}</text>
+            <text>联系人：{{jobDetailInfo.familyName}}</text>
+            <text>联系电话：{{jobDetailInfo.mobilePhone}}</text>
         </view>
     </view>
     <view class="date">发布时间：{{formattedDate}}</view>
