--- a/miniprogram/pages/jobDetail/jobDetail.wxss
+++ b/miniprogram/pages/jobDetail/jobDetail.wxss
@@ -48,3 +48,17 @@ button {
     background-color: #007aff;
     color: white;
 }
+.browse-badge {
+    display: inline-flex;
+    align-items: center;
+    background-color: #f0f9eb;
+    color: #67c23a;
+    padding: 2px 6px;
+    border-radius: 10px;
+    font-size: 12px;
+    margin-left: 10px;
+  }
+  
+  .browse-badge icon {
+    margin-right: 3px;
+  }
