--- a/miniprogram/pages/publishJobPost/publishJobPost.wxss
+++ b/miniprogram/pages/publishJobPost/publishJobPost.wxss
@@ -16,11 +16,11 @@
 }
 
 .picker-group {
-    overflow: hidden;    
+    display: flex;
+    justify-content: space-between;   
 }
 .picker-box{
-    width: 50%;
-    float: left;
+    width: 45%;
 }
 .picker {
     padding: 10px;
@@ -38,19 +38,19 @@
 .input-group {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .input {
-    flex: 1;
+    width: 39%;
     text-align: center;
-    padding: 10px;
+    padding: 20rpx;
     border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-right: 10px;
+    border-radius: 10rpx;
 }
 
 .arrow {
-    margin: 0 10px;
+    margin: 0 10rpx;
 }
 
 .textarea {
