--- a/miniprogram/pages/resumeDetail/resumeDetail.wxml
+++ b/miniprogram/pages/resumeDetail/resumeDetail.wxml
@@ -1,45 +1,44 @@
 <!--pages/resumeDetail/resumeDetail.wxml-->
 <view class="container">
-  <view class="title">人才信息</view>
-  
-  <view class="section">
-    <view class="section-title">证书岗位</view>
-    <view class="content">
-      <text> {{resumes.selectedCertificate}}</text>
-      <text>{{resumes.selectedRank === '水手' ? '' :  resumes.selectedRank }}</text>
+    <view class="title">人才信息</view>
+
+    <view class="section">
+        <view class="section-title">证书岗位</view>
+        <view class="content">
+            <text> {{resumes.selectedCertificate}}</text>
+            <text>{{resumes.selectedRank === '水手' ? '' :  resumes.selectedRank }}</text>
+        </view>
     </view>
-  </view>
-  
-  <view class="section">
-    <view class="section-title">年龄性别</view>
-    <view class="content">
-      <text>{{resumes.age}}岁</text>
-      <text>{{resumes.selectedGender}}</text>
+
+    <view class="section">
+        <view class="section-title">年龄性别</view>
+        <view class="content">
+            <text>{{resumes.age}}岁</text>
+            <text>{{resumes.selectedGender}}</text>
+        </view>
     </view>
-  </view>
-  
-  <view class="section">
-    <view class="section-title">期望待遇</view>
-    <view class="content">
-      <text>{{resumes.selectedSalary}}</text>
-      <text>{{resumes.amount}}元</text>
+
+    <view class="section">
+        <view class="section-title">期望待遇</view>
+        <view class="content">
+            <text>{{resumes.selectedSalary}}</text>
+            <text>{{resumes.amount}}元</text>
+        </view>
     </view>
-  </view>
-  
-  <view class="section">
-    <view class="section-title">特长技能描述</view>
-    <view class="content">
-      <text>{{resumes.skill}}</text>
+    <view class="section">
+        <view class="section-title">联系方式</view>
+        <view class="content">
+            <text>联系人：{{resumes.familyName}}</text>
+            <text>联系电话：{{resumes.mobilePhone}}</text>
+        </view>
     </view>
-  </view>
-  
-  <view class="section">
-    <view class="section-title">联系电话</view>
-    <view class="content">
-      <text>{{resumes.mobilePhone}}</text>
+    <view class="section">
+        <view class="section-title">特长技能描述</view>
+        <view class="content">
+            <text>{{resumes.skill}}</text>
+        </view>
     </view>
-  </view>
-  <view class="date">发布时间：{{formattedDate}}</view>
-  
-  <button bindtap="makePhoneCall">立即联系</button>
+    <view class="date">发布时间：{{formattedDate}}</view>
+
+    <button bindtap="makePhoneCall">立即联系</button>
 </view>
