--- a/miniprogram/pages/recruiter/recruiter.wxml
+++ b/miniprogram/pages/recruiter/recruiter.wxml
@@ -1,7 +1,7 @@
 <!--pages/recruiter/recruiter.wxml-->
 <view class="container">
-    <!-- 如果 jobLists 为空，显示“暂无更多数据” -->
-    <view wx:if="{{jobLists.length === 0}}" class="empty-container">
+    <!-- 如果 jobLists 为空，显示"暂无更多数据" -->
+    <view wx:if="{{tabs.length === 0}}" class="empty-container">
         <view class="empty-text">暂无更多数据</view>
     </view>
 
@@ -15,15 +15,38 @@
         </scroll-view>
         <!-- 内容区域 -->
         <swiper class="content" current="{{currentTab}}" duration="300" bindchange="swiperChange" style="height: {{swiperHeight}}px;">
-            <swiper-item wx:for="{{jobLists}}" wx:key="index">
-                <view class="item">
-                    <block wx:for="{{jobLists[index]}}" wx:key="id">
-                        <list-item item="{{item}}" bind:tap="toDetail" data-id="{{item.id}}"></list-item>
-                    </block>
-                </view>
+            <swiper-item wx:for="{{tabs}}" wx:key="index" class="swiper-item">
+                <!-- 每个分类使用独立的scroll-view -->
+                <scroll-view 
+                scroll-y 
+                enhanced 
+                show-scrollbar="{{false}}" 
+                bindscrolltolower="loadMore" 
+                style="height: 100%;" 
+                data-category="{{item.name}}"
+                >
+                    <view class="job-list">
+                        <block wx:for="{{jobLists[item.name] || []}}" wx:key="id">
+                            <list-item item="{{item}}" bind:tap="toDetail" />
+                        </block>
+
+                        <!-- 加载状态提示 -->
+                        <view class="load-more-footer">
+                            <view wx:if="{{loadingMore && currentTab === index}}">
+                                <text>加载中...</text>
+                            </view>
+                            <view wx:elif="{{hasMoreData[item.name]}}">
+                                <text>上滑加载更多</text>
+                            </view>
+                            <view wx:else>
+                                <text>已经到底了</text>
+                            </view>
+                        </view>
+                    </view>
+                </scroll-view>
             </swiper-item>
         </swiper>
     </view>
-    <!--  未登陆的情况下，展示  -->
+    <!-- 未登陆的情况下，展示 -->
     <isLogin isLogin="{{!isLogin}}" bind:toLogin="toLogin" />
 </view>
